--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
 }
 
 .hero__container {
-    padding: 151px 0 40px 80px;
+    padding: 0 0 40px 80px;
     background-image: url(./imges/background-photo.png);
     width: 1512px;
     height: 842px;
@@ -226,4 +226,43 @@ body {
 .hero__arrow-img {
     width: 28px;
     height: 28px;
+}
+
+.portfolio {
+    margin-top: 10px;
+}
+
+.portfolio__container{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.portfolio__line {
+    border: none;
+    background-color: white;
+    width: 1296px;
+    height: 2px;
+    opacity: 0.5;
+}
+
+.portfolio__text {
+    color: rgb(255, 255, 255);
+    font-family: Garamond;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 140%;
+}
+
+.portfolio__box {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+
+/* .portfolio__silka {} */
+
+.portfolio__img {
+    width: 50px;
+    height: 50px;
 }
